// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Ul AllowTagsComponent UU5.Bricks.Ul props - allowTags 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID02"
    style={Object {}}
    title={null}
    type={null}
  >
    <Li
      className={null}
      content="Buy milk"
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      icon={null}
      iconColorSchema={null}
      id="uuID03"
      ignoreInnerHTML={false}
      key="uuID03"
      mainAttrs={null}
      markerIcon="mdi-default"
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
    <MyAllowTagsComponents
      className={null}
      content="allow tags content"
      id="alloid"
      key="alloid"
      mainAttrs={null}
      markerIcon="mdi-default"
      name={null}
      noIndex={false}
      ref_={null}
      style={null}
      tooltip={null}
    />
  </ul>
</ContextProvider>
`;

exports[`UU5.Bricks.Ul allowTags 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkGrammar 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkGrammar 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkGrammar 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkGrammar 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkHighlight 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkHighlight 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkHighlight 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkHighlight 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkSpaces 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkSpaces 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkSpaces 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul checkSpaces 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul className 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul my-classname"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul content 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul content 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul content 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul content 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul controlled 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul controlled 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul controlled 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul controlled 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul default props 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul disabled 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-common-disabled"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </ul>
</ContextProvider>
`;

exports[`UU5.Bricks.Ul disabled 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul disabled 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul disabled 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-common-disabled"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </ul>
</ContextProvider>
`;

exports[`UU5.Bricks.Ul docKit examples UU5.Bricks.Ul should render without crash 1`] = `undefined`;

exports[`UU5.Bricks.Ul dynamic 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul dynamic 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul dynamic 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul dynamic 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul footer 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Footer
      className={null}
      content={
        <div>
          Footer of section
        </div>
      }
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID-footer"
      ignoreInnerHTML={false}
      key="uuID-footer"
      level={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  </ul>
</ContextProvider>
`;

exports[`UU5.Bricks.Ul header 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  >
    <Header
      className={null}
      colorSchema={null}
      content={
        <div>
          Header of section
        </div>
      }
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID-header"
      ignoreInnerHTML={false}
      key="uuID-header"
      level={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
      underline={false}
    />
  </ul>
</ContextProvider>
`;

exports[`UU5.Bricks.Ul hidden 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-common-hidden"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul hidden 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul hidden 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul hidden 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-common-hidden"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul id 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="myId"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul ignoreHTML 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul ignoreHTML 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul ignoreHTML 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul ignoreHTML 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 5`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 6`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 7`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 8`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 9`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 10`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 11`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 12`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 13`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 14`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 15`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 16`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 17`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 18`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 19`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 20`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 21`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 22`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 23`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 24`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 25`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 26`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 27`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul level 28`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul mainAttrs 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul name 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    name="myName"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel 5`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel 6`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel 7`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel 8`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel 9`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel 10`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel 11`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel 12`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel 13`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel 14`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul nestingLevel 15`] = `""`;

exports[`UU5.Bricks.Ul nestingLevel 16`] = `""`;

exports[`UU5.Bricks.Ul nestingLevel 17`] = `""`;

exports[`UU5.Bricks.Ul nestingLevel 18`] = `""`;

exports[`UU5.Bricks.Ul nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Ul nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Ul noIndex 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-noindex"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul noIndex 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul noIndex 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul noIndex 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-noindex"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul selected 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-common-selected"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul selected 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul selected 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul selected 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-common-selected"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul style 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul style 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul style 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul style 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul textCorrector 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul textCorrector 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul textCorrector 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul textCorrector 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul tooltip 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title="My Tooltip"
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul type 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-bricks-ul-type-disc"
    id="uuID"
    style={Object {}}
    title={null}
    type="disc"
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul type 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-bricks-ul-type-square"
    id="uuID"
    style={Object {}}
    title={null}
    type="square"
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul type 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-bricks-ul-type-square"
    id="uuID"
    style={Object {}}
    title={null}
    type="square"
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul type 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-bricks-ul-type-circle"
    id="uuID"
    style={Object {}}
    title={null}
    type="circle"
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul type 5`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-bricks-ul-type-circle"
    id="uuID"
    style={Object {}}
    title={null}
    type="circle"
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul type 6`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul uu5-bricks-ul-type-square"
    id="uuID"
    style={Object {}}
    title={null}
    type="square"
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul underline 1`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul underline 2`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul underline 3`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;

exports[`UU5.Bricks.Ul underline 4`] = `
<ContextProvider
  value={
    Object {
      "tagName": "UU5.Bricks.Ul",
    }
  }
>
  <ul
    className="uu5-bricks-ul"
    id="uuID"
    style={Object {}}
    title={null}
    type={null}
  />
</ContextProvider>
`;
